--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 
-@plugin 'daisyui';
+@plugin 'daisyui' {
+    themes: light --default;
+};
 
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
