--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
 @import "tailwindcss";
 
 @plugin 'daisyui' {
-  themes:
-    ukwp --default,
-    mbduo;
+  themes: ukwp --default;
 }
 
 /*
@@ -30,7 +28,7 @@
   src: url("/fonts/safiramarch.ttf") format("truetype");
 }
 
-[data-theme="ukwp"] {
+@theme {
   --font-display: "Safira", Georgia, serif;
   --font-serif: "EB Garamond", Georgia, serif;
 }
@@ -41,33 +39,6 @@
   prefers-dark: false;
   color-scheme: "light";
   --color-base-100: oklch(0.985 0 0);
-  --color-base-200: oklch(0.869 0.005 56.366);
-  --color-base-300: oklch(92% 0.04 240);
-  --color-base-content: oklch(20% 0.05 240);
-
-  /* border radius */
-  --radius-selector: 1rem;
-  --radius-field: 0.25rem;
-  --radius-box: 0.5rem;
-
-  /* base sizes */
-  --size-selector: 0.25rem;
-  --size-field: 0.25rem;
-
-  /* border size */
-  --border: 1px;
-
-  /* effects */
-  --depth: 1;
-  --noise: 0;
-}
-
-@plugin "daisyui/theme" {
-  name: "mbduo";
-  default: true;
-  prefers-dark: false;
-  color-scheme: "light";
-  --color-base-100: oklch(0.627 0.194 149.214);
   --color-base-200: oklch(0.869 0.005 56.366);
   --color-base-300: oklch(92% 0.04 240);
   --color-base-content: oklch(20% 0.05 240);
